fix header banner gap

--- a/css/vpkely.css
+++ b/css/vpkely.css
@@ -10,7 +10,7 @@
     --color-bg: linear-gradient(45deg, #ffaf00, #c30000);
                             saffron&deep_orange. #f2f0ee; electric purple #bb02ff);
     */
-    -color-bg: linear-gradient(45deg, rgba(206,223,240, 0.4),rgba(239,222,205,0.7));
+    --color-bg: linear-gradient(45deg, rgba(206,223,240, 0.4),rgba(239,222,205,0.7));
     --color-bg-secondary: #c3c3c3;  /*#e9e9e9;*/
     --color-link: #2c2d2f; /*#49545f;*/
     --color-secondary: #e9920d; /*#920de9;*/
@@ -30,6 +30,32 @@
     --width-card-medium: 460px;
     --width-card-wide: 800px;
     --width-content: 1080px;
+}
+
+html[data-theme='light'] {
+    --color-accent: #118bee15;
+    --color-bg: linear-gradient(45deg, rgba(206,223,240, 0.4),rgba(239,222,205,0.7));
+    --color-bg-secondary: #c3c3c3;  /*#e9e9e9;*/
+    --color-link: #2c2d2f; /*#49545f;*/
+    --color-secondary: #e9920d; /*#920de9;*/
+    --color-secondary-accent: #920de90b;
+    --color-shadow: #f4f4f4;
+    --color-table: #118bee;
+    --color-text: #000;
+    --color-text-secondary: #666;
+}
+
+html[data-theme='dark'] {
+        --color-accent: #0097fc4f;
+        --color-bg: #333;
+        --color-bg-secondary: #555;
+        --color-link: #0097fc;
+        --color-secondary: #a5b9e9; /*#e20de9;*/
+        --color-secondary-accent: #417aad4f; /*#e20de94f;*/
+        --color-shadow: #bbbbbb20;
+        --color-table: #0097fc;
+        --color-text: #f7f7f7;
+        --color-text-secondary: #aaa;
 }
 
 /* <html color-mode="user"> if browser is in darkmode this will kick in*/
